--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "chrome",
+        "url": "http://localhost:8080",
+        "webRoot": "${workspaceFolder}"
+    },
         {
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\User\\Desktop\\HTML Practicals\\Cybertec Enterprises\\index.html"
+            "file": "C:\\Users\\User\\Desktop\\Github\\Cybertec-Enterprises\\index.html"
         }
     ]
 }
